--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.6",
     "quasar": "^2.0.0"
   },
   "devDependencies": {
